--- a/src/app/food-selection/food-selection.component.scss
+++ b/src/app/food-selection/food-selection.component.scss
@@ -7,6 +7,23 @@
   border-radius: 2rem;
 }
 
+.content-list {
+  list-style-type: none;
+  height: 26rem;
+  margin-left: -6rem;
+  font-weight: 450;
+  font-size: 30px;
+}
+
+footer {
+  font-size: 20px;
+  padding-top: 22rem;
+}
+
+li {
+  margin-bottom: 7rem;
+}
+
 h5 {
   font-size: 4rem;
   width: 55rem;
