--- a/src/app/food-selection/food-selection.component.html
+++ b/src/app/food-selection/food-selection.component.html
@@ -7,10 +7,10 @@
     <li>Panquecas</li>
     <li>Massas</li>
   </ul>
-  <!-- <mat-tab-group style="color: black" mat-align-tabs="start">
+  <mat-tab-group style="color: black" mat-align-tabs="start">
     <mat-tab label="CEP">Insira CEP</mat-tab>
     <mat-tab label="Seus dados">Nome e número</mat-tab>
     <mat-tab label="Observação">Content 3</mat-tab>
-  </mat-tab-group> -->
+  </mat-tab-group>
   <footer>copyright 2022 &copy; offBurguer</footer>
 </div>
