--- a/src/app/food-selection/food-selection.component.html
+++ b/src/app/food-selection/food-selection.component.html
@@ -2,15 +2,15 @@
   <h5>FOOD SELECTOR</h5>
   <h3>by OffBurguer</h3>
   <ul class="content-list">
-    <mat-tab>Lanches</mat-tab>
+    <li>Lanches</li>
     <li>Pizzas</li>
     <li>Panquecas</li>
     <li>Massas</li>
+    <mat-slide-toggle class="example-margin slide"></mat-slide-toggle>
+    <mat-slide-toggle class="example-margin slide"></mat-slide-toggle>
+    <mat-slide-toggle class="example-margin slide"></mat-slide-toggle>
+    <mat-slide-toggle class="example-margin slide"></mat-slide-toggle>
   </ul>
-  <mat-tab-group style="color: black" mat-align-tabs="start">
-    <mat-tab label="CEP">Insira CEP</mat-tab>
-    <mat-tab label="Seus dados">Nome e número</mat-tab>
-    <mat-tab label="Observação">Content 3</mat-tab>
-  </mat-tab-group>
+
   <footer>copyright 2022 &copy; offBurguer</footer>
 </div>
