--- a/src/app/food-selection/food-selection.component.scss
+++ b/src/app/food-selection/food-selection.component.scss
@@ -39,3 +39,19 @@ h5 {
   41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
   100px 100px 80px rgba(0, 0, 0, 0.07)
 }
+
+.slide {
+  width: 2rem;
+  display: block;
+  position: relative;
+  margin-bottom: 7rem;
+  left: 11rem;
+  top: -33.3rem;
+  box-shadow:
+  -0.7px -0.6px 4.3px rgba(0, 0, 0, 0.066),
+  2.2px 2.2px 12px rgba(0, 0, 0, 0.095),
+  13.8px 13.4px 28.9px rgba(0, 0, 0, 0.124),
+  69px 67px 96px rgba(0, 0, 0, 0.19)
+;
+  border-radius: 10rem;
+}
