--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-food-selection></app-food-selection>
+<body style="background-color: #5f9ea07a">
+  <app-food-selection></app-food-selection>
+</body>
