--- a/src/app/food-selection/food-selection.component.html
+++ b/src/app/food-selection/food-selection.component.html
@@ -16,15 +16,15 @@
       (click)="check('pizza')"
       class="example-margin slide"
     ></mat-slide-toggle>
-    <mat-slide-toggle class="example-margin slide"></mat-slide-toggle>
-    <mat-slide-toggle class="example-margin slide"></mat-slide-toggle>
+    <mat-slide-toggle class="example-margin slide" disabled></mat-slide-toggle>
+    <mat-slide-toggle class="example-margin slide" disabled></mat-slide-toggle>
   </ul>
 
   <footer>copyright 2022 &copy; offBurguer</footer>
 </div>
 
 <div class="content-card-second shadow-card">
-  <h5>OffBurguer</h5>
+  <h5>OFFBURGUER</h5>
 
   <div *ngIf="this.isCheckedLanche">
     <h1 style="padding-top: 10rem">Lanches</h1>
